--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta property="og:title" content="Chillax Lang Mga People">
+  <meta property="og:image" content="https://i.ibb.co/T0dssrQ/james2.jpg">
   <title>Chillax Lang Mga People</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
